# OOP-Lab7

./: CMakeLists.txt  README.md  main.cpp
includes/: Editor.h  FightRules.h  FightVisitor.h  Game.h  NPC.h  NPCFactory.h  NPCTypes.h  Observer.h
src/: Editor.cpp  FightRules.cpp  Game.cpp  NPCFactory.cpp  NPCTypes.cpp  Observer.cpp
tests/: CMakeLists.txt  test.cpp
